--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,8 @@ nav a:hover {
 
 /*----------------------Footer----------------------*/
 
+/*Test updates*/
+
 footer {
 	background-color: #f0f0f0;
 	padding: 32px 0 0px;
