--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 /*----------------------Containers----------------------*/
 
 #dark-wrapper {
-	background-color: #000;
+	background-color: #23262B;
 /*	position: fixed;
 	width: 100%;
 	z-index: -1;*/
@@ -27,13 +27,13 @@ body {
 	padding-top: 48px;
 }
 
-#header, .pages, #footer-content, #copyright {
+#header, .pages, #footer-content, #copyright, #project-grid-top, #grid-container {
 	margin: 0px 30px; 
 	padding-bottom: 24px;
 }
 
 @media screen and (min-width: 600px) {
-	#header, .pages, #footer-content, #copyright {
+	#header, .pages, #footer-content, #copyright, #project-grid-top, #grid-container {
 	margin: 0px auto;
 	width: 80%;
 	padding-bottom: 48px;
@@ -41,7 +41,7 @@ body {
 }
 
 @media screen and (min-width: 900px) and (max-width: 1199px) {
-	#header, .pages, #footer-content, #copyright {
+	#header, .pages, #footer-content, #copyright, #project-grid-top, #grid-container {
 		margin: 0 auto;
 		max-width: 900px;
 /*		padding-bottom: 88px;
@@ -49,7 +49,7 @@ body {
 }
 
 @media screen and (min-width: 1200px) {
-	#header, .pages, #footer-wrapper, #footer-content, #copyright {
+	#header, .pages, #footer-wrapper, #footer-content, #copyright, #project-grid-top, #grid-container {
 	margin: 0px auto;
 	max-width: 1080px;
 	}
@@ -58,6 +58,10 @@ body {
 
 
 /*----------------------Global type styles----------------------*/
+
+a {
+	text-decoration: none;
+}
 
 h1 {
 	border-bottom: 2px solid #ff7575;
@@ -68,6 +72,33 @@ h1 {
 	line-height: 48px;
 	display: inline;
 	-webkit-font-smoothing: antialiased;
+}
+
+#project-top h2 {
+	color: #fff;
+	display: inline;
+	font-size: 28px;
+	font-weight: normal;
+	letter-spacing: -.8px;
+	line-height: 30px;
+	margin: 0 0 30px;
+	-webkit-font-smoothing: antialiased;
+}
+
+@media screen and (min-width: 600px) {
+#project-top h2 {
+		font-size: 40px;
+		letter-spacing: -1px;
+		line-height: 40px;
+	}
+}
+
+@media screen and (min-width: 900px) {
+#project-top h2 {
+	font-size: 52px;
+	letter-spacing: -1.5px;
+	line-height: 48px;
+	}
 }
 
 h3 {
@@ -108,12 +139,27 @@ h3 a:hover {
 	transition: border-color .25s ease-out;
 }
 
+h4 {
+	font-size: 24px;
+	font-weight: bold;
+	letter-spacing: -1px;
+	line-height: 28px;
+	margin: 0; 
+	-webkit-font-smoothing: antialiased;
+}
+
+@media screen and (min-width: 900px) {
+	h4 {
+		margin-bottom: 4px;
+	}
+} 
+
 p {
 	font-size: 20px;
 	font-weight: 100;
 	letter-spacing: -.5px;
 	line-height: 30px;
-	margin: 0 0 28px;
+	margin: 0px 0px 28px;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -151,9 +197,14 @@ p a:hover {
 
 .margin-header {
 	display: inline-block;
+	font-weight: bold;
 	font-size: 16px;
 	line-height: 30px;
 	margin: 0;
+}
+
+#white-wrapper .margin-header {
+	color: #000;
 }
 
 @media screen and (min-width: 900px) {
@@ -177,7 +228,7 @@ header {
 	box-sizing: border-box;
 	height: 136px;
 	padding: 16px 0;
-	background-color: #000;
+	background-color: #23262B;
 }
 
 @media screen and (min-width: 600px) {
@@ -260,10 +311,6 @@ nav a:hover {
 
 /*----------------------Modules----------------------*/
 
-#pages {
-
-}
-
 #intro-block {
 	color: #fff;
 	padding-top: 16px;
@@ -287,14 +334,103 @@ nav a:hover {
 	}
 }
 
+
+
 #white-text-panel {
 	background-color: #fff;
 }
 
+#project-grid-top {
+	padding-top: 80px;
+}
+
+
+
+#wip {
+	color: #999;
+	display: inline-block;
+	font-size: 13px;
+	line-height: 20px;
+	margin: 0; 
+	padding-left: 4px;
+	vertical-align: top;
+
+}
+
+/*----------------------Grid items----------------------*/
+
+.grid-item {
+		margin: 0;
+	}
+	@media screen and (min-width: 600px) {
+		.grid-item {
+			display: inline-block;
+			width: 48.5%;
+		}
+		.right-col {
+		float: right;	
+	}
+}
+
+
+
+.project-image img {
+	width: 100%;
+}
+
+figcaption {
+	margin: 6px 0 56px;
+}
+
+@media screen and (min-width: 600px) {
+	figcaption {
+		padding-right: 30px;
+	}
+}
+
+@media screen and (min-width: 900px) {
+	figcaption {
+		margin-top: 24px;
+	}
+}
+
+figcaption p {
+	color: #75797F; 
+	font-size: 16px;
+	line-height: 20px;
+	margin: 0;
+}
+
+.project-description {
+	padding-top: 12px;
+}
+
+.project-title h4 {
+	border-bottom: 1px solid #fff;
+	color: #000;
+	display: inline;
+	text-decoration: none;
+}
+
+h4 a {
+	color: #000;
+	text-decoration: none;
+}
+
+.project-title h4:hover {
+	border-bottom: 1px solid #ff7575;
+	-webkit-transition: border-color .25s ease-out;
+	-moz-transition: border-color .25s ease-out;
+	-o-transition: border-color .25s ease-out;
+	transition: border-color .25s ease-out;
+}
+
 /*----------------------Footer----------------------*/
+
 
 footer {
 	background-color: #f0f0f0;
+	bottom: 0px;
 	padding: 32px 0 0px;
 }
 
@@ -307,25 +443,24 @@ footer {
 @media screen and (min-width: 1200px) {
 	#footer-content p {
 		display: inline-block;
+	    padding-right: 40px;
 	}
 	#footer-content {
-		float: right;
+		float:right;
 		left: 25%;
 		width: 75%;
 	}
+
+	#copyright {
+		float: left;
+		width: 25%;
+	}
 }
+
 @media screen and (min-width: 900px) {
 	#footer-content p {
 		display: inline;
 	    padding-right: 40px;
-	}
-}
-
-@media screen and (min-width: 1200px) {
-	#copyright {
-		display: inline-block;
-		float: left;
-		width: 25%;
 	}
 }
 
