--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,24 @@ p a:hover {
 	border-bottom: none;
 }
 
+.client, .project-name {
+	color: #fff;
+	font-size: 18px;
+	font-weight: bold;
+	line-height: 24px;
+	margin-bottom: 0px;
+}
+
+.project-name {
+	color: #C3C8D0;
+}
+
+.case-study-intro {
+	color: #fff;
+	font-size: 36px;
+	line-height: 46px;
+}
+
 /*----------------------Header----------------------*/
 
 header {
