--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
 
 }
 
+img {
+	width: 100%;
+}
+
 /*----------------------Containers----------------------*/
 
 #dark-wrapper {
@@ -283,10 +287,7 @@ header {
 	}
 }
 
-.lead-paragraph p {
-	font-size: 18px;
-	line-height: 28px;
-}
+
 
 
 /*----------------------Navigation----------------------*/
@@ -395,14 +396,41 @@ nav a:hover {
 
 }
 
-/*----------------------Case study header----------------------*/
+/*----------------------Case study----------------------*/
 
 #page-header-bar > #case-study-container {
-	padding-top: 30px;
+
 }
 
 .project-kickers {
 	padding-bottom: 9px;
+}
+
+.lead-paragraph p {
+	font-size: 18px;
+	line-height: 28px;
+}
+
+@media screen and (min-width: 600px) {
+
+	.lead-paragraph {
+
+	}
+
+	.intro-left {
+		display: inline-block;
+		float: left;
+		clear: both;
+		width: 50%;
+		display: inline;
+	}
+
+	.intro-right {
+		float: right;
+		clear: both;
+		width: 50%;
+		display: inline;
+	}
 }
 
 /*----------------------Grid items----------------------*/
