--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,14 @@ img {
 @media screen and (min-width: 900px) and (max-width: 1199px) {
 	#header, .pages, #footer-content, #copyright, #page-header-bar, #grid-container {
 		margin: 0 auto;
-		max-width: 900px;
+		max-width: 800px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	#header, .pages, #footer-wrapper, #footer-content, #copyright, #page-header-bar, #grid-container {
 	margin: 0px auto;
-	max-width: 980px;
+	max-width: 1020px;
 	}
 }
 
@@ -101,6 +101,10 @@ h1 {
 	-webkit-font-smoothing: antialiased;
 }
 
+h1 a {
+	color: #ff7575;
+}
+
 #project-top h2 {
 	color: #fff;
 	display: inline;
@@ -114,7 +118,7 @@ h1 {
 
 @media screen and (min-width: 600px) {
 #project-top h2 {
-		font-size: 40px;
+		font-size: 36px;
 		letter-spacing: -1px;
 		line-height: 40px;
 	}
@@ -122,7 +126,7 @@ h1 {
 
 @media screen and (min-width: 900px) {
 #project-top h2 {
-	font-size: 52px;
+	font-size: 48px;
 	letter-spacing: -1.5px;
 	line-height: 48px;
 	}
@@ -154,7 +158,7 @@ h3 {
 
 h3 a {
 	color: #fff;
-	border-bottom: 1px solid #535353;
+	border-bottom: 1px solid #7b7b7b;
 	text-decoration: none;
 }
 
